--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,6 +86,10 @@
   }
   body {
     @apply bg-background text-foreground;
+    scrollbar-gutter: stable both-edges;
+  }
+  html {
+    scrollbar-gutter: stable both-edges;
   }
 }
 
